force-app/main/default/objects/Application__c/fields/AHPRA_Number__c.field-meta.xml
<CustomField>
    <fullName>AHPRA_Number__c</fullName>
    <label>AHPRA Number</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>