force-app/main/default/objects/Application__c/fields/Application_Reference__c.field-meta.xml
<CustomField>
    <fullName>Application_Reference__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Reference</label>
    <type>Text</type>
</CustomField>