force-app/main/default/objects/Application__c/fields/Applied_To_Other_HREC_In_Past_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Applied_To_Other_HREC_In_Past_12_Months__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applied To Other HREC In Past 12 Months</label>
    <type>Checkbox</type>
</CustomField>