force-app/main/default/objects/Application__c/fields/Commercial_Interest__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commercial Interest</label>
    <type>Checkbox</type>
</CustomField>