force-app/main/default/objects/Application__c/fields/Commercial_Interest_Details__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Interest_Details__c</fullName>
    <description>Details of the practitioner&apos;s commercial interests</description>
    <label>Commercial Interest Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>