force-app/main/default/objects/Application__c/fields/Open_Changes_Required__c.field-meta.xml
<CustomField>
    <fullName>Open_Changes_Required__c</fullName>
    <label>Open Changes Required</label>
    <summaryFilterItems>
        <field>Changes_Required__c.Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </summaryFilterItems>
    <summaryForeignKey>Changes_Required__c.Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>