force-app/main/default/objects/Application__c/fields/Open_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Open_Concerns__c</fullName>
    <label>Open Concerns</label>
    <summaryFilterItems>
        <field>Concern__c.Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </summaryFilterItems>
    <summaryForeignKey>Concern__c.Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>