force-app/main/default/objects/Application__c/fields/Practitioner_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The practitioner making an application</description>
    <label>Practitioner Lookup</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>