force-app/main/default/objects/Application__c/fields/Practitioner_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_s_Name__c</fullName>
    <label>Practitioner&apos;s Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>