force-app/main/default/objects/Application__c/fields/Professional_Association_Membership__c.field-meta.xml
<CustomField>
    <fullName>Professional_Association_Membership__c</fullName>
    <label>Professional Association Membership #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>