force-app/main/default/objects/Application__c/fields/Qualifications_and_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Qualifications_and_Expertise__c</fullName>
    <label>Qualifications and Expertise</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>