force-app/main/default/objects/Application__c/fields/Risk_Management_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Risk_Management_Strategy__c</fullName>
    <description>How will risks associated with the use of the unapproved good be managed? This should address:
Process of obtaining informed consent from patients
Monitoring and reporting that will be undertaken (include details of interval and duration of monitoring)
Process of investigating and reporting adverse events</description>
    <label>Risk Management Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>