force-app/main/default/objects/Application__c/fields/Sites__c.field-meta.xml
<CustomField>
    <fullName>Sites__c</fullName>
    <inlineHelpText>Sites at which the unapproved goods will be prescribed (list all addresses)</inlineHelpText>
    <label>Sites</label>
    <type>TextArea</type>
</CustomField>