force-app/main/default/objects/Application__c/fields/Third_Party_Contact__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Third Party Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications (3rd Party Contact)</relationshipLabel>
    <relationshipName>ThirdPartyApplications</relationshipName>
    <type>Lookup</type>
</CustomField>