force-app/main/default/objects/Application__c/recordTypes/Medicinal_Cannabis_Application.recordType-meta.xml
<RecordType>
    <fullName>Medicinal_Cannabis_Application</fullName>
    <active>true</active>
    <description>An application for a GP to be able to prescribe medicinal cannabis</description>
    <label>Medicinal Cannabis Application</label>
</RecordType>