force-app/main/default/objects/Application__c/validationRules/AHPRA_Number_has_incorrect.validationRule-meta.xml
<ValidationRule>
    <fullName>AHPRA_Number_has_incorrect</fullName>
    <active>true</active>
    <errorConditionFormula>NOT (REGEX(AHPRA_Number__c,&quot;[A-Z]{3}[0-9]{10}&quot;))</errorConditionFormula>
    <errorDisplayField>AHPRA_Number__c</errorDisplayField>
    <errorMessage>Format of the AHPRA number is A3N10 e.g. MED0000000001</errorMessage>
</ValidationRule>