force-app/main/default/objects/Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Practitioner_Lookup__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>AHPRA_Number__c</columns>
    <columns>Applied_To_Other_HREC_In_Past_12_Months__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Risk_Management_Strategy__c</columns>
    <columns>Sites__c</columns>
    <columns>Status__c</columns>
    <columns>Third_Party_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>