force-app/main/default/objects/Application__c/listViews/Applications_From_The_Past_Week.listView-meta.xml
<ListView>
    <fullName>Applications_From_The_Past_Week</fullName>
    <columns>NAME</columns>
    <columns>Practitioner_s_Name__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Email__c</columns>
    <columns>Risk_Management_Strategy__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>LAST_WEEK</value>
    </filters>
    <label>Applications From The Past Week</label>
</ListView>