force-app/main/default/objects/Application__c/listViews/Applications_Test.listView-meta.xml
<ListView>
    <fullName>Applications_Test</fullName>
    <columns>Application_Reference__c</columns>
    <columns>Status__c</columns>
    <columns>Practitioner_s_Name__c</columns>
    <columns>Address__c</columns>
    <columns>ABN__c</columns>
    <columns>Medicare_Provider_Number__c</columns>
    <columns>AHPRA_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>Applications</label>
</ListView>